--- a/app/styles/scss/init.scss
+++ b/app/styles/scss/init.scss
@@ -10,7 +10,7 @@ $susy: (
 	container: 1140px,
 	gutters: 0.25,
 	global-box-sizing: border-box,
-	debug: (image: show-columns)
+	//debug: (image: show-columns)
 );
 
 //global things
