--- a/app/styles/scss/layout/_main.scss
+++ b/app/styles/scss/layout/_main.scss
@@ -3,9 +3,14 @@ body {
 }
 
 .wrapper {
-	max-width: 800px;
+	max-width: 1140px;
 	margin: 0 auto;
 	padding: 0 15px;
+}
+
+.container {
+	@include container;
+	/* height: 100vh; */
 }
 
 .row {
