--- a/app/styles/scss/layout/_main.scss
+++ b/app/styles/scss/layout/_main.scss
@@ -5,6 +5,10 @@
 
 body {
 	font: normal 18px/1.6em sans-serif;
+	-webkit-text-size-adjust: 100%;
+	-moz-osx-font-smoothing: grayscale;
+	-webkit-font-smoothing: antialiased;
+	overflow-y: scroll:
 }
 
 .wrapper {
